margin gap fix

--- a/src/assets/css/overwrites.css
+++ b/src/assets/css/overwrites.css
@@ -28,3 +28,8 @@ img {
 .timeline-Header .timeline-InformationCircle-widgetParent {
   display: none !important;
 }
+
+.row {
+  margin-right: 0px;
+  margin-left: 0px;
+}
