--- a/src/assets/scss/pages/_index.scss
+++ b/src/assets/scss/pages/_index.scss
@@ -37,11 +37,6 @@
 .blog__container {
   display: flex;
   flex-wrap: wrap;
-
-  @include breakpoint(small) {
-    padding-right: 0px;
-    padding-left: 0px;
-  }
 }
 
 .contact_button {
@@ -53,6 +48,6 @@
 
   @include breakpoint(small) {
     bottom: 590px;
-    margin-right: 5px;
+    margin-right: 7px;
   }
 }
